# ecc

./: .gitignore  CMakeLists.txt  Notes.md  kernel.cu  pyproject.toml  routines.cpp  template.h  utility.cpp
ecc_py/: ecc_2d_inline_exact_v30.py  ecc_2d_inline_exact_v30_opt.py  ecc_3d_opt_triton.py  ecc_cl_3d_triton.py  ecc_el_triton_comb.py  ecc_v30_combined.csv  ecc_v30_histogram.txt  ecc_v30_unique_values.txt
ecc_py/bench/: datagen.py  dataset_datagen.py
